--- a/Web.config
+++ b/Web.config
@@ -16,16 +16,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ida:ClientId" value="d7774a9a-b9f8-43e1-ab85-ced5d75a25a7" />
-    <add key="ida:AADInstance" value="https://williamfiddesb2c.b2clogin.com/tfp/" />
-    <add key="ida:ClientSecret" value="l8R-C13-NbbaMJ9Y6JmR2cdjTw-sur_a~7" />
-    <add key="ida:Domain" value="williamfiddesb2c.onmicrosoft.com" />
-    <add key="ida:Tenant" value="655e51e9-be5e-494d-9d12-38aa65588af0" />
+    <add key="ida:ClientId" value="{}" />
+    <add key="ida:AADInstance" value="{}" />
+    <add key="ida:ClientSecret" value="{}" />
+    <add key="ida:Domain" value="{}" />
+    <add key="ida:Tenant" value="{}" />
     <add key="ida:RedirectUri" value="https://localhost:44300/" />
     <add key="ida:PostLogoutRedirectUri" value="https://localhost:44300/" />
 
-    <add key="ida:SignUpSignInPolicyId" value="B2C_1_V2_SUSI_DefaultPage" />
-    <add key="ida:UserProfilePolicyId" value="B2C_1_B2C_ProfileEdit" />
+    <add key="ida:SignUpSignInPolicyId" value="{}" />
+    <add key="ida:UserProfilePolicyId" value="{}" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
